--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,42 +1,33 @@
-# name: Deploy to Server
+name: Deploy to Server
 
-# on:
-#   push:
-#     branches:
-#       - main
+on:
+  push:
+    branches:
+      - main
 
-# jobs:
-#   build-and-deploy:
-#     runs-on: ubuntu-latest
+jobs:
+  build-and-deploy:
+    runs-on: ubuntu-latest
 
-#     steps:
-#       - name: Checkout code
-#         uses: actions/checkout@v3
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-#       - name: Setup Node.js
-#         uses: actions/setup-node@v3
-#         with:
-#           node-version: "16"
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "18"
 
-#       - name: Install dependencies and build
-#         run: |
-#           npm install
-#           npm run build  # 假设 `npm run build` 是打包命令，会生成 dist 文件夹
+      - name: Install dependencies and build
+        run: |
+          npm install
+          npm run build
 
-#       - name: Deploy to Server
-#         uses: appleboy/scp-action@v0.1.5
-#         with:
-#           host: ${{ secrets.SERVER_HOST }} # 服务器地址
-#           username: ${{ secrets.SERVER_USER }} # 服务器用户名
-#           key: ${{ secrets.SSH_PRIVATE_KEY }} # 前面在 GitHub Secrets 中设置的 SSH 私钥
-#           source: "dist/*" # 上传打包生成的 dist 文件夹内容
-#           target: "/path/to/nginx/html" # 服务器上 Nginx 静态文件的路径
-
-#       - name: Restart Nginx
-#         uses: appleboy/ssh-action@v0.1.4
-#         with:
-#           host: ${{ secrets.SERVER_HOST }}
-#           username: ${{ secrets.SERVER_USER }}
-#           key: ${{ secrets.SSH_PRIVATE_KEY }}
-#           script: |
-#             sudo systemctl restart nginx
+      - name: Deploy to Server
+        uses: appleboy/scp-action@v0.1.5
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          source: "dist/*"
+          target: "/opt/1panel/apps/openresty/openresty/www/sites/${{ secrets.SERVER_HOST }}/index"
