--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,4 +31,4 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: ${{ secrets.PORT }}
           source: "dist/*"
-          target: "/opt/1panel/apps/openresty/openresty/www/sites/${{ secrets.SERVER_HOST }}/index"
+          target: ${{ secrets.DESTINATION_PATH }}
