--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "commit": "git add . && cz-customizable"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "element-plus": "^2.8.3",
     "vue": "^3.4.37",
     "vue-router": "^4.4.5"
